flux/clusters/apps/base/homepage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: homepage
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homepage
    spec:
      serviceAccountName: homepage
      containers:
      - name: homepage
        image: ghcr.io/gethomepage/homepage:latest
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /app/config
        - name: logs
          mountPath: /app/config/logs
      volumes:
      - name: config
        configMap:
          name: homepage
      - name: logs
        emptyDir: {}
